# eShopRs_9

./: README.md  eShop.sln
src/Catalog.API/: Catalog.API.csproj
src/Identity.API/Configuration/: Config.cs
src/eShop.AppHost/: Program.cs
src/eShop.AppHost/Properties/: launchSettings.json
src/web-app-rs/: .gitignore
src/web-app-rs/comp/: .gitignore  .prettierrc  .webapp.env  Cargo.toml  Makefile.toml  package-lock.json  package.json  rustfmt.toml
src/web-app-rs/comp/api_version/: Cargo.toml
src/web-app-rs/comp/api_version/src/: versioning.rs
src/web-app-rs/comp/app_err/: Cargo.toml
src/web-app-rs/comp/app_err/src/: lib.rs
src/web-app-rs/comp/app_events/: Cargo.toml
src/web-app-rs/comp/app_events/src/: eg_by_id_filter.rs  integration_events.rs  lib.rs
src/web-app-rs/comp/app_events/src/integration_events/: integration_event.rs  order_status_changed_to_awaiting_validation.rs  order_status_changed_to_cancelled.rs  order_status_changed_to_paid.rs  order_status_changed_to_shipped.rs  order_status_changed_to_stock_confirmed.rs  order_status_changed_to_submitted.rs  register.rs
src/web-app-rs/comp/auth/: Cargo.toml
src/web-app-rs/comp/auth/src/: authorised.rs  client.rs  lib.rs  require_auth.rs  server.rs  server_api.rs  service.rs  user.rs  users.rs  utl.rs
src/web-app-rs/comp/auth/src/loginout/: mod.rs
src/web-app-rs/comp/auth/src/loginout/callback/: comp.rs  mod.rs  sfn.rs
src/web-app-rs/comp/auth/src/loginout/login/: comp.rs  mod.rs  sfn.rs
src/web-app-rs/comp/auth/src/loginout/logout/: comp.rs  sfn.rs
src/web-app-rs/comp/auth/src/openid_client/: error.rs  mod.rs  openid_client.rs
src/web-app-rs/comp/domain/basket_ordering/: Cargo.toml  build.rs
src/web-app-rs/comp/domain/basket_ordering/src/: lib.rs
src/web-app-rs/comp/domain/basket_ordering/src/basket/: client.rs  mod.rs  server.rs  server_api.rs  service.rs  types.rs
src/web-app-rs/comp/domain/basket_ordering/src/basket_state/: client.rs  context_layer.rs  mod.rs  server.rs  server_api.rs  service.rs  types.rs
src/web-app-rs/comp/domain/basket_ordering/src/ordering/: mod.rs  server.rs  server_api.rs  service.rs  types.rs
src/web-app-rs/comp/domain/catalog/catalog/: Cargo.toml
src/web-app-rs/comp/domain/catalog/catalog/src/: lib.rs  server.rs  server_api.rs  service.rs  types.rs
src/web-app-rs/comp/ebus/: Cargo.toml
src/web-app-rs/comp/ebus/src/: content.rs  dispatcher.rs  events.rs  lib.rs  lib_err.rs  test.rs
src/web-app-rs/comp/ebus/src/content/: content.rs  processor.rs
src/web-app-rs/comp/ebus/src/content/test/: test.rs
src/web-app-rs/comp/ebus/src/dispatcher/: dispatcher.rs  processor.rs
src/web-app-rs/comp/ebus/src/dispatcher/test/: test.rs
src/web-app-rs/comp/ebus/src/events/: eg_by_id_filter.rs  ev_1.rs  ev_2.rs
src/web-app-rs/comp/ebus/src/events/test/: test.rs
src/web-app-rs/comp/error_template/: Cargo.toml
src/web-app-rs/comp/error_template/src/: error_template.rs  lib.rs
src/web-app-rs/comp/rabbit_mq_bus/: Cargo.toml
src/web-app-rs/comp/rabbit_mq_bus/src/: amqo_config.rs  event_bus.rs  lib.rs  lib_err.rs  test.rs
src/web-app-rs/comp/rabbit_mq_bus/src/event_bus/: event_bus.rs
src/web-app-rs/comp/rabbit_mq_bus/src/event_bus/test/: test.rs
src/web-app-rs/comp/rabbit_mq_bus/src/events/: eg_by_id_filter.rs  ev_1.rs  ev_2.rs
src/web-app-rs/comp/rabbit_mq_bus/src/events/test/: test.rs
src/web-app-rs/comp/url_mapper/: Cargo.toml
src/web-app-rs/comp/url_mapper/src/: internal.rs  lib.rs
src/web-app-rs/web-app-ws/: Cargo.toml  log4rs.yaml  rustfmt.toml  webapp.env
src/web-app-rs/web-app-ws/.cargo/: config.toml
src/web-app-rs/web-app-ws/app/: Cargo.toml  build.rs
src/web-app-rs/web-app-ws/app/src/: lib.rs
src/web-app-rs/web-app-ws/app/src/components/: mod.rs  nav_link.rs
src/web-app-rs/web-app-ws/app/src/edit_form/: edit_form.rs  form_field.rs  form_field_text.rs  in_put_text.rs  mod.rs  validation_component.rs
src/web-app-rs/web-app-ws/app/src/hlp/: mod.rs  section_outlet.rs
src/web-app-rs/web-app-ws/app/src/layout/: cart_menu.rs  footer_bar.css  footer_bar.rs  header_bar.css  header_bar.rs  mod.rs  user_menu.css  user_menu.rs
src/web-app-rs/web-app-ws/app/src/pages/: catalog.rs  mod.rs
src/web-app-rs/web-app-ws/app/src/pages/cart/: cart.css  cart.rs  mod.rs
src/web-app-rs/web-app-ws/app/src/pages/catalog/: catalog.css  catalog.rs  catalog_list_item.css  catalog_list_item.rs  catalog_search.css  catalog_search.rs
src/web-app-rs/web-app-ws/app/src/pages/checkout/: checkout.css  checkout.rs  mod.rs
src/web-app-rs/web-app-ws/app/src/pages/item/: item.css  item.rs  mod.rs
src/web-app-rs/web-app-ws/app/src/pages/orders/: mod.rs  orders.css  orders.rs
src/web-app-rs/web-app-ws/app/src/services/: errors.rs  mod.rs
src/web-app-rs/web-app-ws/app/src/services/product_image_url_provider/: default.rs  product_image_url_provider_i.rs
src/web-app-rs/web-app-ws/frontend/: .rustc_info.json  Cargo.toml
src/web-app-rs/web-app-ws/server/: Cargo.toml
src/web-app-rs/web-app-ws/server/migrations/: 20250718201215_add_user_info.sql
src/web-app-rs/web-app-ws/server/src/: main.rs
src/web-app-rs/web-app-ws/server/src/eventbus/: bus_consumer.rs  eventbus.rs  mod.rs
src/web-app-rs/web-app-ws/server/src/forwarder/: mod.rs  product_images.rs
src/web-app-rs/web-app-ws/style/: main.scss  main2.css
src/web-app-rs/web-app-ws/stylers/stylers/: Cargo.toml
src/web-app-rs/web-app-ws/stylers/stylers/src/: lib.rs
src/web-app-rs/web-app-ws/stylers/stylers_core/: Cargo.toml
src/web-app-rs/web-app-ws/stylers/stylers_core/src/: lib.rs
src/web-app-rs/web-app-ws/stylers/stylers_core/src/style/: css_at_rule.rs  css_style_declar.rs  css_style_rule.rs  css_style_sheet.rs  mod.rs  utils.rs
src/web-app-rs/web-app-ws/stylers/stylers_core/src/style_sheet/: css_at_rule.rs  css_style_declar.rs  css_style_rule.rs  css_style_sheet.rs  mod.rs
src/web-app-rs/web-app-ws/stylers/stylers_macro/: Cargo.toml
src/web-app-rs/web-app-ws/stylers/stylers_macro/src/: lib.rs
src/web-app-rs/web-app-ws/stylers/stylers_macro/tests/: style.rs  style_sheet.rs
(+19 files in other folders)
