[package]
name = "app_err"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { workspace = true, optional = true }
leptos.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos_meta = { workspace = true, optional = true }
rabbit_mq_bus = { workspace = true, optional = true }
reqwest = { workspace = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = [
  "dep:axum",
  "dep:leptos_axum",
  "dep:rabbit_mq_bus",
  "leptos_meta/ssr",
  "leptos/ssr",
]

