[package]
name = "auth"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
app_err = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, optional = true }
axum-login = { workspace = true, optional = true }
error_template = { workspace = true }
leptos.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos_meta.workspace = true
leptos_router.workspace = true
openidconnect = { workspace = true, features = ["native-tls"], optional = true }
pin-project-lite = { workspace = true }
reqwest = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, optional = true }
thiserror.workspace = true
tower = { workspace = true, optional = true }
tower-sessions = { workspace = true, optional = true }
url.workspace = true

[features]
default = []
hydrate = ["app_err/hydrate", "leptos/hydrate"]
ssr = [
  "app_err/ssr",
  "dep:axum",
  "dep:axum-login",
  "dep:leptos_axum",
  "dep:openidconnect",
  "dep:reqwest",
  "dep:sqlx",
  "dep:tower",
  "dep:tower-sessions",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos/ssr",
]

