[package]
name = "ebus"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["traces"]
traces = ["tracing", "tracing-subscriber"]

