[package]
name = "error_template"
version = "0.1.0"
edition = "2024"

[dependencies]
http.workspace = true
leptos.workspace = true
leptos_axum = { workspace = true, optional = true }
leptos_meta.workspace = true
leptos_router.workspace = true

[features]
default = []
hydrate = ["leptos/hydrate"]
ssr = [
  "dep:leptos_axum",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos/ssr",
]