[package]
name = "rabbit_mq_bus"
version = "0.1.0"
edition = "2024"

[dependencies]
amqprs.workspace = true
async-trait.workspace = true
dotenvy.workspace = true
ebus.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
testcontainers.workspace = true
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[features]
default = ["traces"]
traces = ["tracing", "tracing-subscriber"]

