[package]
name = "stylers"
version = "1.0.0-alpha"
edition = "2024"
authors = ["Abishek P"]
license = "MIT"
repository = "https://github.com/abishekatp/stylers"
description = "Scoped CSS for Rust web frameworks like leptos"
keywords = ["web", "css", "leptos"]
categories = ["web-programming"]
readme = "../README.md"

[dependencies]
glob = "0.3.2"
syn = { version = "2.0.100", features = ["full"] }
stylers_core = { path = "../stylers_core" }
stylers_macro = { path = "../stylers_macro" }
proc-macro2 = "1.0.94"

[features]
hydrate = ["stylers_core/hydrate"]
ssr = ["stylers_core/ssr"]

