[package]
name = "stylers_core"
version = "1.0.2"
edition = "2024"
authors = ["Abishek P"]
license = "MIT"
repository = "https://github.com/abishekatp/stylers"
description = "Scoped CSS implementation in Rust"
readme = "../README.md"

[dependencies]
getrandom = { version = "0.3", default-features = false, optional = true }
levenshtein = "1.0.5"
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0.40"
rand = "0.9.0"
rand_chacha = "0.9.0"

[features]
hydrate = ["getrandom/wasm_js"]
ssr = ["getrandom"]