[package]
name = "stylers_macro"
version = "1.0.2"
edition = "2024"
authors = ["Abishek P"]
license = "MIT"
repository = "https://github.com/abishekatp/stylers"
description = "Scoped CSS for Rust web frameworks like leptos"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
quote = "1.0"
proc-macro2 = { version = "1.0" }
litrs = "0.4.1"
stylers_core = { path = "../stylers_core" }
